# syslog5424

./: Cargo.toml  Readme.md  azure-pipelines.yml
src/: errors.rs  iana.rs  lib.rs  slog_rfc5424.rs  types.rs
src/rfc5424/: mod.rs  types.rs
